--- a/app/src/main/res/layout/list_item_categories.xml
+++ b/app/src/main/res/layout/list_item_categories.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginStart="12dp"
+    android:layout_margin="12dp"
     android:layout_marginTop="20dp">
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/popular_destination"/>
+                android:text="@string/categories"/>
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -44,17 +44,20 @@
                     <com.google.android.material.imageview.ShapeableImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/item_popular_destination"
+                        android:background="@drawable/item_categories"
+                        android:src="@drawable/bg_categories"
                         android:layout_marginEnd="12dp"/>
                     <com.google.android.material.imageview.ShapeableImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/item_popular_destination"
+                        android:background="@drawable/item_categories"
+                        android:src="@drawable/bg_categories"
                         android:layout_marginEnd="12dp"/>
                     <com.google.android.material.imageview.ShapeableImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/item_popular_destination"
+                        android:background="@drawable/item_categories"
+                        android:src="@drawable/bg_categories"
                         android:layout_marginEnd="12dp"/>
                 </LinearLayout>
             </HorizontalScrollView>
