--- a/app/src/main/res/layout/list_item_near_you.xml
+++ b/app/src/main/res/layout/list_item_near_you.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginStart="12dp"
+    android:layout_margin="12dp"
     android:layout_marginTop="20dp">
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/popular_destination"/>
+                android:text="@string/near_you"/>
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -44,17 +44,20 @@
                     <com.google.android.material.imageview.ShapeableImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/item_popular_destination"
+                        android:background="@drawable/item_near_you"
+                        android:src="@drawable/bg_near_you"
                         android:layout_marginEnd="12dp"/>
                     <com.google.android.material.imageview.ShapeableImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/item_popular_destination"
+                        android:background="@drawable/item_near_you"
+                        android:src="@drawable/bg_near_you"
                         android:layout_marginEnd="12dp"/>
                     <com.google.android.material.imageview.ShapeableImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/item_popular_destination"
+                        android:background="@drawable/item_near_you"
+                        android:src="@drawable/bg_near_you"
                         android:layout_marginEnd="12dp"/>
                 </LinearLayout>
             </HorizontalScrollView>
