--- a/app/src/main/res/layout/list_item_popular_destination.xml
+++ b/app/src/main/res/layout/list_item_popular_destination.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginStart="12dp"
+    android:layout_margin="12dp"
     android:layout_marginTop="20dp">
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,16 +45,19 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/item_popular_destination"
+                        android:src="@drawable/bg_popular_destination"
                         android:layout_marginEnd="12dp"/>
                     <com.google.android.material.imageview.ShapeableImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/item_popular_destination"
+                        android:src="@drawable/bg_popular_destination"
                         android:layout_marginEnd="12dp"/>
                     <com.google.android.material.imageview.ShapeableImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/item_popular_destination"
+                        android:src="@drawable/bg_popular_destination"
                         android:layout_marginEnd="12dp"/>
                 </LinearLayout>
             </HorizontalScrollView>
